examples/type_system/failing/111_call_arg_anonymous_fn.flx
// parity-expected-stdout-begin
// parity-expected-stdout-end
// parity-expected-stderr-begin
// • 1 error • examples/type_system/failing/111_call_arg_anonymous_fn.flx
// error[E300]: Argument Type Mismatch
//
// I found the wrong type in the 1st argument to this function.
//
//   examples/type_system/failing/111_call_arg_anonymous_fn.flx:31:49
//    |
// 31 |     let _x = (if true { greet } else { greet })(42)
//    |                                                 ^^
//    |                                                 -- this argument has type `Int`
//
// Note:
//   expected argument type: String
//   found argument type: Int
//   the actual argument type is inferred from this expression
//
// Help:
//   Try `to_string(...)` to convert a `Int` into a `String`.
// parity-expected-stderr-end
// expect: compile_error
// expect-error: E300

fn greet(name: String) -> String {
    name
}

fn main() -> Unit {
    let _x = (if true { greet } else { greet })(42)
}
